<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/d_1"
    tools:context=".LogIn.PhoneVerifyFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sighup_info"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        style="@style/CustomTextView"
        />
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:elevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/d_3"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/edt_Email"
                android:background="@drawable/edittext_outline"
                android:textColorHint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/invalid_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:text="invalid email!"
        android:layout_marginLeft="10dp"
        android:visibility="invisible"
        />
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/d_3"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/edt_password"
                android:background="@drawable/edittext_outline"
                android:textColorHint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textSize="14sp"
                android:padding="10dp"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/invalid_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:text="password is less than 6 character"
        android:layout_marginLeft="10dp"
        android:visibility="invisible"
        />


    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Continue"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/d_3"
        />
</LinearLayout>
    <com.github.mmin18.widget.RealtimeBlurView
        android:id="@+id/blur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:realtimeBlurRadius="20dp"
        android:visibility="invisible"
        app:realtimeOverlayColor="#8000" />
    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit"
        android:layout_centerInParent="true"
        style="@style/SpinKitView.RotatingPlane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:SpinKit_Color="#64FFDA" />
</RelativeLayout>