<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/d_1"
    tools:context=".LogIn.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/white"
            />
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/d_3"
                android:orientation="vertical"
                >
                <EditText
                    android:id="@+id/edt_email_login"
                    android:background="@drawable/edittext_outline"
                    android:textColorHint="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/invalid_email_login"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="email adress invalid!"
            android:textColor="#FF0000"
            android:visibility="invisible"
            />
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/d_3"
                android:orientation="vertical"
                >
                <EditText
                    android:id="@+id/edt_password_login"
                    android:background="@drawable/edittext_outline"
                    android:textColorHint="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/invalid_password_login"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="password is less than 6 characters."
            android:textColor="#FF0000"
            android:visibility="invisible"
            />
        <Button
            android:id="@+id/btn_login"
            android:backgroundTint="@color/d_3"
            android:textColorHint="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:textAlignment="textEnd"
                android:layout_weight="3"
                android:textColorHint="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="Create a new Account"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="#69F0AE"
                android:gravity="end" />
            <Button
                android:id="@+id/btn_sighup"
                android:backgroundTint="@color/d_3"
                android:textColorHint="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </LinearLayout>
    <com.github.mmin18.widget.RealtimeBlurView
        android:id="@+id/blur_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:realtimeBlurRadius="20dp"
        android:visibility="invisible"
        app:realtimeOverlayColor="#8000" />
    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit_login"
        android:layout_centerInParent="true"
        style="@style/SpinKitView.RotatingPlane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:SpinKit_Color="#64FFDA" />
</RelativeLayout>